refactor: moved task factory and message management to OrientDB distributed context